# Tg2MaxChannelsBridge

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  db.py  docker-compose.yaml  example.env  links.json  loader.py  main.py  pyproject.toml  run.sh
handlers/: admin_handlers.py  max_handlers.py  tg_handlers.py
scripts/: load-image.sh  save-image.sh
tests/: __init__.py  test_admin_handlers.py  test_auth.py  test_db.py  test_formatting.py  test_max_bot.py  test_max_handlers.py  test_resolvers.py  test_tg_handlers.py
utils/: auth.py  formatting.py  max_bot.py  maxapi_compat.py  resolvers.py
