[project]
name = "tg2maxchannelsbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "maxapi>=0.9.12",
    "python-dotenv>=1.2.1",
    "tinydb>=4.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["db", "handlers", "utils"]

[tool.coverage.report]
fail_under = 90
show_missing = true
